--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,17 @@ djangorestframework==3.16.1
 easy-thumbnails==2.10.1
 idna==3.10
 loguru==0.7.3
+numpy==2.3.2
+pandas==2.3.2
 phonenumbers==9.0.12
 pillow==11.3.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
+python-dateutil==2.9.0.post0
+pytz==2025.2
 qrcode==8.2
 requests==2.32.5
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.1
 tzdata==2025.2
